--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "caroa04"
 version = "0.1.0"
 description = "Library to control the CAROA04 CAN-IO expander device from eletechsup."
 readme = "README.rst"
+requires-python = ">=3.8"
 authors = [
   {name = "Rodolphe Mete Soyding", email = "r.soyding@gmail.com"}
 ]
@@ -18,7 +19,7 @@ classifiers = [
 ]
 license = {text = "MIT license"}
 dependencies = [
-  
+    "python-can>=3.3.0",
 ]
 
 [project.optional-dependencies]
