--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 license = {text = "MIT license"}
 dependencies = [
     "python-can>=3.3.0",
+    "numpy>=1.24.0",
 ]
 
 [project.optional-dependencies]
