Update docs and add badge

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ maintainers = [
   {name = "Rodolphe Mete Soyding", email = "r.soyding@gmail.com"}
 ]
 classifiers = [
-
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3 :: Only",
 ]
 license = {text = "MIT license"}
 dependencies = [
